fix minor catches

--- a/projects/JavKing/src/players/dashboard.html
+++ b/projects/JavKing/src/players/dashboard.html
@@ -43,8 +43,8 @@
             <div class="server-list-container">
                 <div class="server-list-content-wrapper">
                     <div class="server-list-header-container">
-                        <h3 class="server-list-heading font-friendly-welcome">
-                            Hello, Zenpai
+                        <h3 class="server-list-heading font-friendly-welcome" id="discord_user">
+                            Hello
                         </h3>
                         <p id="server-list-heading-sub" aria-details="true" class="server-list-heading-sub font-friendly-welcome-sub">
                             Please select a server to get started
