Update JavKing github link

--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -103,7 +103,7 @@
                     </a>
                 </div>
                 <div>
-                    <a class="wb_button" href="https://github.com/Zenwiwi/JavKing-Bot" target="_blank">
+                    <a class="wb_button" href="https://github.com/Zenwiwi/JavKing" target="_blank">
                         <span>GitHub Repository</span>
                     </a>
                 </div>
