Updated GitHub link

--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/Donut/home.html"
                             target="_blank">Donut.js</a>
                         <!-- <a class="btn btn-outline-zenpai btn-sm btn-mobfull" href="/commands" role="button">Commands</a> -->
-                        <a class="btn btn-outline-light btn-sm btn-mobfull" href="https://github.com/Zenwiwi"
+                        <a class="btn btn-outline-light btn-sm btn-mobfull" href="https://github.com/SiLyGoose"
                             role="button">GitHub</a>
                         <!-- <span class="d-inline-block btn-mobfull" tabindex="0" data-toggle="tooltip" data-placement="top"
                             title="" data-original-title="Not ready yet, coming soon!">
