--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -103,7 +103,7 @@
                     </a>
                 </div>
                 <div>
-                    <a class="wb_button" href="https://github.com/Zenwiwi/JavKing" target="_blank">
+                    <a class="wb_button" href="https://github.com/SiLyGoose/JavKing" target="_blank">
                         <span>GitHub Repository</span>
                     </a>
                 </div>
@@ -118,7 +118,7 @@
                 </a>
             </div>
             <div class="icon github">
-                <a href="https://github.com/Zenwiwi/JavKing-Bot" target="_blank">
+                <a href="https://github.com/SiLyGoose/JavKing-Bot" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
