Fixed buttons not working

--- a/projects/JavKing/home.html
+++ b/projects/JavKing/home.html
@@ -97,13 +97,12 @@
             <div class="topbuttons">
                 <div>
                     <a id="discord-btn" class="wb_button"
-                        href="https://discordapp.com/api/oauth2/authorize?client_id=694655522237972510&permissions=37055488&scope=bot"
-                        target="_blank">
+                        onclick="window.open('https://discordapp.com/api/oauth2/authorize?client_id=694655522237972510&permissions=37055488&scope=bot')">
                         <span style="color:#fff;"><i id="discord" class="fa fa-discord"></i>Add to Discord</span>
                     </a>
                 </div>
                 <div>
-                    <a class="wb_button" href="https://github.com/SiLyGoose/JavKing" target="_blank">
+                    <a class="wb_button" onclick="window.open('https://github.com/SiLyGoose/JavKing')">
                         <span>GitHub Repository</span>
                     </a>
                 </div>
