Change link to JavKing

--- a/home.html
+++ b/home.html
@@ -168,13 +168,13 @@
                     <a class="btn btn-outline-warning btn-mobfull disabled" href="#" role="button"
                         style="cursor:not-allowed;pointer-events:all;" tabindex="-1">Projects</a>
                     <p class="lead zp-topmarg">
-                        <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/JavKing/home.html"
-                            role="button" target="_blank">JavKing</a>
+                        <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="http://javking.herokuapp.com/"
+                            role="button">JavKing</a>
                         <!--<a class="btn btn-outline-blurple btn-sm btn-mobfull" href="https://listcord.com/bot/375750637540868107" role="button">Vote on Listcord</a>-->
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/Clock/home.html"
                             role="button" target="_blank">Clock.js</a>
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/Donut/home.html"
-                            target="_blank">Donut.js</a>
+                            role="button">Donut.js</a>
                         <!-- <a class="btn btn-outline-zenpai btn-sm btn-mobfull" href="/commands" role="button">Commands</a> -->
                         <a class="btn btn-outline-light btn-sm btn-mobfull" href="https://github.com/SiLyGoose"
                             role="button">GitHub</a>
