Change JavKing url

--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
                     <a class="btn btn-outline-warning btn-mobfull disabled" href="#" role="button"
                         style="cursor:not-allowed;pointer-events:all;" tabindex="-1">Projects</a>
                     <p class="lead zp-topmarg">
-                        <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/JavKing/home.html"
+                        <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="https://javking.live"
                             role="button" target="_blank">JavKing</a>
                         <!--<a class="btn btn-outline-blurple btn-sm btn-mobfull" href="https://listcord.com/bot/375750637540868107" role="button">Vote on Listcord</a>-->
                         <a class="btn btn-outline-blurple btn-sm btn-mobfull" href="/projects/Clock/home.html"
